--- a/Site.Master
+++ b/Site.Master
@@ -54,6 +54,9 @@
                     <li class="nav-item">
                         <a runat="server" class="nav-link" href="~/Contact">Contact</a>
                     </li>
+                    <li class="nav-item">
+                        <a runat="server" class="nav-link" href="~/Home/Index">MVC</a>
+                    </li>
                 </ul>
             </div>
         </nav>
