fixed checkbox click

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -45,8 +45,8 @@
         $.validator.unobtrusive.options = settings;
 
         $(document).ready(function () {
-            $("#married").change(function () {
-                $("#child-section").toggleclass("d-none");
+            $("#Married").change(function () {
+                $("#child-section").toggleClass("d-none");
             });
         });
     </script>
